--- a/index.html
+++ b/index.html
@@ -3293,13 +3293,13 @@ window.application = new Application();
 		</rect>
 	</svg>
 	<div id="STORE">
-		<a href="file:///C:/Users/91750/OneDrive/Desktop/Complete%20Project/Page%202/Web_1280___2.html"><span>STORE</span></a>
+		<a href="https://19bet1035.github.io/Page-2/"><span>STORE</span></a>
 	</div>
 	<div id="HOME">
-		<a href ="file:///C:/Users/91750/OneDrive/Desktop/Complete%20Project/Page1/Web_1280___1.html"><span>HOME</span></a>
+		<a href ="https://19bet1035.github.io/Page-1/"><span>HOME</span></a>
 	</div>
 	<div id="ABOUT">
-		<a href="file:///C:/Users/91750/OneDrive/Desktop/Complete%20Project/About%20Us/Web_1280___5.html"><span>ABOUT</span></a>
+		<a href="https://19bet1035.github.io/About-Us/"><span>ABOUT</span></a>
 	</div>
 	<img id="fabrizio-conti-0k3j6fYD7nc-uns" src="fabrizio-conti-0k3j6fYD7nc-uns.png" srcset="fabrizio-conti-0k3j6fYD7nc-uns.png 1x, fabrizio-conti-0k3j6fYD7nc-uns@2x.png 2x">
 		
